--- a/assets/stylus/partials/question.styl
+++ b/assets/stylus/partials/question.styl
@@ -12,8 +12,6 @@
 		.selector-content
 			width 100%
 			float left
-			position relative
-			z-index 5
 			button
 				width 50%
 				float left
